Solve overflow bug

--- a/htdocs/asset/css/action/show.css
+++ b/htdocs/asset/css/action/show.css
@@ -58,12 +58,16 @@
     margin: auto;
   }
 
-  #page-wrapper{
+  body {
     background: -webkit-radial-gradient(#fff,#ccc); /* Safari 5.1 to 6.0 */
     background: -o-radial-gradient(#fff,#ccc); /* For Opera 11.6 to 12.0 */
     background: -moz-radial-gradient(#fff,#ccc); /* For Firefox 3.6 to 15 */
     background: radial-gradient(#fff,#ccc); /* Standard syntax */
     background-size: cover;
+  }
+
+  #page-wrapper {
+    background-color: rgba(0,0,0,0.0);
   }
 
   .sh-title>.text>.main {
